qtdemux: fix 16-bit PCM audio advertised with 'raw ' fourcc

'NONE' and 'raw ' fourcc don't always contain U8 audio, it can
be more bits as well, in which case it's just like 'twos'.

https://bugzilla.gnome.org/show_bug.cgi?id=752613